顶部导航栏

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Iconfont stylesheet: replace `font_xxxxxx` with your iconfont project id from https://www.iconfont.cn/ -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_5045243_tm922li5uts.js">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bili-web</title>
